# warsaw_flats_api

./: .gitignore  README.md  pyproject.toml  update.sh
api/: api.py  convert_to_json.py  get_dataframes.py  price_history.py  utils.py
json_dir/: area_prices.json  flats.json  latest_changes.json  random_links.json
