[requires]
python_version = "3.9"

[tool.poetry]
name = "Warsaw Flats API"
version = "0.1.0"
description = "statistics of scraped flat advertisements from 2021"
authors = ["MAB"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flask="*"
pandas="*"
pyyaml="*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
